<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/fir_green"
        android:gravity="center"
        android:text="@string/auth_page_title_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_page_email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <EditText
            android:id="@+id/login_page_email"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/auth_page_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_page_password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="@dimen/default_margin"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@id/login_page_email_input_layout"
        app:layout_constraintTop_toBottomOf="@id/login_page_email_input_layout">

        <EditText
            android:id="@+id/login_page_password"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/auth_page_password"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_page_forgot_password"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:text="@string/auth_page_forgot_password"
        app:layout_constraintEnd_toEndOf="@id/login_page_password_input_layout"
        app:layout_constraintTop_toBottomOf="@id/login_page_password_input_layout" />

    <Button
        android:id="@+id/login_page_button"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="@dimen/default_margin"
        android:padding="20dp"
        android:text="@string/auth_page_login"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/login_page_password_input_layout"
        app:layout_constraintTop_toBottomOf="@id/login_page_forgot_password" />

    <View
        android:id="@+id/separator"
        android:layout_width="1dp"
        android:layout_height="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_button" />

    <TextView
        android:id="@+id/textView3"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_page_no_account"
        app:layout_constraintEnd_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@id/login_page_button" />

    <TextView
        android:id="@+id/login_page_register"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/auth_page_register"
        android:textColor="@color/fir_green"
        app:layout_constraintStart_toEndOf="@+id/separator"
        app:layout_constraintTop_toTopOf="@+id/separator" />

</androidx.constraintlayout.widget.ConstraintLayout>