<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/fir_green"
        android:gravity="center"
        android:text="@string/auth_page_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reset_page_back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:tint="@color/white"
        android:layout_marginLeft="@dimen/default_margin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_page_email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <EditText
            android:id="@+id/reset_page_email"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/auth_page_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/TitleTextStyle"
        android:id="@+id/reset_page_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="@dimen/default_margin"
        android:padding="20dp"
        android:text="@string/auth_page_reset_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/reset_page_email_input_layout"
        app:layout_constraintTop_toBottomOf="@id/reset_page_email_input_layout" />



</androidx.constraintlayout.widget.ConstraintLayout>